--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,20 @@ project(print_ip VERSION 0.0.1)
 
 add_executable(print_ip_cli print_ip.cpp)
 
+set_target_properties(print_ip_cli PROPERTIES
+  CXX_STANDARD 14
+  CXX_STANDARD_REQUIRED ON
+  COMPILE_OPTIONS -Wpedantic -Wall -Wextra
+)
+
 install(TARGETS print_ip_cli RUNTIME DESTINATION bin)
+
+set(CPACK_GENERATOR DEB)
 
 set(CPACK_PACKAGE_VERSION_MAJOR "${PROJECT_VERSION_MAJOR}")
 set(CPACK_PACKAGE_VERSION_MINOR "${PROJECT_VERSION_MINOR}")
 set(CPACK_PACKAGE_VERSION_PATCH "${PROJECT_VERSION_PATCH}")
+
+set(CPACK_PACKAGE_CONTACT real.garik@gmail.com)
+
+include (CPack)
