fix: error: ‘enable_if_t’ in namespace ‘std’ does not name a type

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.2)
 
-project(print_ip VERSION 0.0.1)
+project(print_ip VERSION 0.0.$ENV{TRAVIS_BUILD_NUMBER)
 
 add_executable(print_ip_cli print_ip.cpp)
 
@@ -9,8 +9,6 @@ set_target_properties(print_ip_cli PROPERTIES
   CXX_STANDARD_REQUIRED ON
   COMPILE_OPTIONS -Wpedantic -Wall -Wextra
 )
-
-set(CMAKE_CXX_FLAGS "-fpermissive")
 
 install(TARGETS print_ip_cli RUNTIME DESTINATION bin)
 
